# multimodal-ai-assistant

./: README.md
chatbot_backend/: .env.example  README.md  pyproject.toml  requirements.txt  requirements2.txt  vercel.json
chatbot_backend/src/chatbot_backend/: __init__.py  db.py  main.py  service.py
chatbot_frontend/: README.md  next.config.ts  package-lock.json  package.json
chatbot_frontend/src/: middleware.ts
chatbot_frontend/src/app/: globals.css
chatbot_frontend/src/app/(chat)/: layout.tsx  page.tsx
chatbot_frontend/src/app/(chat)/chat/[thread_id]/: page.tsx
chatbot_frontend/src/app/(chat)/components/: Chat.tsx  ChatNameElem.tsx  Input.tsx  LoginForm.tsx  Messages.tsx  NewChat.tsx  Sidenav.tsx  SignupForm.tsx
chatbot_frontend/src/app/(chat)/context/: ChatContext.tsx
chatbot_frontend/src/app/auth/login/: page.tsx
chatbot_frontend/src/app/auth/signup/: page.tsx
chatbot_frontend/src/components/ui/: markdown-renderer.tsx  message-actions.tsx  top-bar.tsx
